<resources>
    <string name="app_name">Nash</string>
    <string name="text_username_hint">Username</string>
    <string name="text_password_hint">Password</string>
    <string name="text_button_login">Login</string>
    <string name="text_name_hint">Name</string>
    <string name="text_phone_number_hint">Phone Number</string>
    <string name="text_button_register">Register</string>
    <string name="text_location_name_hint">Location Name</string>
    <string name="text_location_address_hint">Location Address</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_add_new_service">Add New Services</string>
    <string name="text_retype_password_hint">Retype Password</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="text_therapist_name">Therapist Name</string>
    <string name="text_cancel_back">Back</string>
    <string name="text_work_since">Work Since</string>
    <string name="text_button_add_location">Add New Location</string>
    <string name="text_location_list_title">Locations</string>
    <string name="select_therapist">Select Therapist</string>
    <string name="text_search">Search</string>
    <string name="text_new_customer">New Customer</string>
    <string name="text_reminder">Reminder</string>
    <string name="text_address_hint">Address</string>
    <string name="text_date_birth_hint">Date of Birth</string>
    <string name="text_customer_name_hint">Customer Name</string>
    <string name="text_email_hint">Email</string>
    <string name="text_has_eyelash_before_title">Have you ever had eyelash extension before?</string>
    <string name="text_have_allergy">Do you have any allergy?</string>
    <string name="text_wear_contact_lens">Do you wear contact lens?</string>
    <string name="text_had_surgery">Have you had eye surgery/surgery around your eyes?</string>
    <string name="text_know_nash">How do you know Nash beauty lounge?</string>
    <string name="text_please_add_addtional_info">Please add more information</string>
    <string name="text_agree_tnc">With this I agree with Nash Terms and Conditions</string>
    <string name="text_title_customer_name">Name</string>
    <string name="text_title_date">Date</string>
    <string name="text_title_service_name">Service</string>
    <string name="text_title_therapist_name">Therapist</string>
    <string name="text_title_price">Price</string>
    <string name="text_title_customer_reminder">Reminder</string>
    <string name="text_total_value">Total Value</string>
    <string name="text_add_service">Add Service</string>
    <string name="text_title_customer_email">Email</string>
    <string name="text_title_customer_phone">Phone</string>
    <string name="text_title_customer_service">Service</string>
    <string name="text_customer_add_service_title">Add new service</string>
    <string name="text_new_customer_form_title">New Customer</string>
    <string name="text_common_continue">Continue</string>
    <string name="no_selection"></string>
    <string name="text_service_date">Service Date</string>
    <string name="text_title_location">Location</string>
    <string name="text_delete_service_group">Delete Service Group</string>
    <array name="list_know_nash_options">
        <item name="text_social_media">Social Media</item>
        <item name="text_signage">Signage</item>
        <item name="text_relatives">Friends/family/recommendations</item>
        <item name="text_others">Others</item>
    </array>
    <string name="text_confirmation_dialog_delete_message"><![CDATA[Are you sure you want to delete <b>%1$s</b> data?]]></string>
    <string name="text_common_no">No</string>
    <string name="text_common_yes">Yes</string>
    <string name="text_new_password_hint">New Password</string>
    <string name="text_repeat_new_password">Repeat New Password</string>
    <string name="text_button_change_password">Change Password</string>
    <string name="text_service_group_hint">Service Group</string>
    <string name="text_service_hint">Service</string>
    <string name="text_therapist_hint">Therapist</string>
</resources>
