<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/common_dp_16"
    android:paddingTop="@dimen/common_dp_16">


    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_title_date"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_title_service_name"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_title_therapist_name"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_title_location" />

</android.support.constraint.ConstraintLayout>