<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/common_dp_16"
    android:paddingRight="@dimen/common_dp_16"
    tools:context=".user.register.RegisterActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="@dimen/common_dp_128"
        android:layout_height="@dimen/common_dp_128"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_8"
            android:hint="@string/text_username_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutUsername">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_4"
            android:inputType="textPassword"
            android:hint="@string/text_password_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_4"
            android:inputType="textPersonName"
            android:hint="@string/text_name_hint" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutName">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_4"
            android:inputType="phone|number"
            android:hint="@string/text_phone_number_hint" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnRegister"
        app:layout_constraintBottom_toBottomOf="@id/btnRegister"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_dp_8"
        android:text="@string/text_button_register"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPhoneNumber" />
</android.support.constraint.ConstraintLayout>
