<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/common_dp_16"
    android:paddingRight="@dimen/common_dp_16"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="@dimen/common_dp_128"
        android:layout_height="@dimen/common_dp_128"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_8"
            android:hint="@string/text_username_hint" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutUsername">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_4"
            android:inputType="textPassword"
            android:hint="@string/text_password_hint" />
    </android.support.design.widget.TextInputLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_dp_8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_login"
            android:textAllCaps="true" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btnLogin"
            app:layout_constraintTop_toTopOf="@id/btnLogin" />

    </FrameLayout>
</android.support.constraint.ConstraintLayout>
