<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_dp_16"
        android:layout_marginBottom="@dimen/common_dp_16">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="@dimen/common_dp_16"
            android:paddingRight="@dimen/common_dp_16"
            android:textSize="18sp"
            android:text="Add Therapist"/>
        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="@dimen/common_dp_32"
            android:layout_height="@dimen/common_dp_32"
            android:layout_marginRight="@dimen/common_dp_16"
            android:background="@drawable/ic_close_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutTherapistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/common_dp_16"
            android:paddingRight="@dimen/common_dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnClose">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextTherapistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_dp_8"
                android:hint="@string/text_therapist_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/common_dp_8"
            android:paddingLeft="@dimen/common_dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/inputLayoutWorkSince"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutTherapistName">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_dp_4"
                android:hint="@string/text_phone_number_hint"
                android:inputType="phone|number" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutWorkSince"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_dp_4"
            android:paddingRight="@dimen/common_dp_16"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/inputLayoutPhoneNumber"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutTherapistName">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextWorkSince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_dp_4"
                android:focusable="false"
                android:hint="@string/text_work_since"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_1"
            android:layout_marginTop="@dimen/common_dp_16"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutPhoneNumber"
            android:background="@color/gray"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_8"
            android:layout_marginLeft="@dimen/common_dp_16"
            android:layout_marginRight="@dimen/common_dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/frameLayoutButton"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:textColor="@color/white"
            android:text="@string/text_cancel_back"
            android:textAllCaps="true" />


        <FrameLayout
            android:id="@+id/frameLayoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_8"
            android:layout_marginLeft="@dimen/common_dp_16"
            android:layout_marginRight="@dimen/common_dp_16"
            app:layout_constraintLeft_toRightOf="@id/btnCancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register"
                android:textColor="@color/white"
                android:textAllCaps="true" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btnLogin"
                app:layout_constraintTop_toTopOf="@id/btnLogin" />

        </FrameLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
